helm/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    name: grafana-ingress
  namespace: prometheus
  annotations:
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "prometheus-basic-auth"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.th1enlm02.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
